const_typed_builder_test/compile_fail/assume_mandatory_explicit_optional_1.stderr
error[E0308]: mismatched types
  --> ./compile_fail/assume_mandatory_explicit_optional_1.rs:15:14
   |
15 |         .quz("Hello world!".to_string())
   |          --- ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<String>`, found `String`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected enum `Option<String>`
            found struct `String`
note: method defined here
  --> ./compile_fail/assume_mandatory_explicit_optional_1.rs:10:9
   |
10 |         quz: Option<String>,
   |         ^^^----------------
help: try wrapping the expression in `Some`
   |
15 |         .quz(Some("Hello world!".to_string()))
   |              +++++                          +
